references related work

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -66,8 +66,7 @@ Peer review is still the only quality control mechanism devoted to evaluate scie
 \paragraph{Need for more reviewers.} There is a disproportion between the progressive increase in journals publications and the number of experienced reviewers selected for the task which demands an expansion of the reviewer's pool including early career scientists. \cite{tragedy-reviewers}.
 
 \subsection{Related work} Some mild attempts to credit peer review has been handled without much success by journals via attribution of virtual 'badges', certificates of performance, citation in annual editorials.
-\newline It's also worth mentioning \emph{Publons}\cite{Publons}, a service integrated with ORCID (researcher identifier) that provides peer-review metric; \emph{Peerage} of Science\cite{Peerage} and \emph{ResearchSquare}, a journal-independent free service for scientific peer review and publishing that provides also a peer-review of the reviews.
-\emph{ScienceMiles} \cite{ScienceMiles} proposes a cryptocurrency for incentivizing peer-reviews through a blockchain-based platform and an open peer-review process. \emph{INFINITCODEX (I8X)} \cite{I8X}, is a platform that promotes cooperative user behaviour through dynamic research papers that undergo  continuous peer review process. The system implements cryptoeconomical incentives for building reputation in the community of users.
+\newline It's also worth mentioning \emph{Publons}\cite{Publons}, a service integrated with ORCID (researcher identifier) that provides peer-review metric; \emph{Peerage} of Science\cite{Peerage} and \emph{ResearchSquare}, a journal-independent free service for scientific peer review and publishing that provides also a peer-review of the reviews. Spearpoint\cite{ResearchCoin} proposes \emph{r-coin} (for ‘ReviewCoin’ or ‘ResearchCoin’), a cryptocurrency that researchers earn for undertaking peer-reviews and that can used to pay for publication fees. \emph{ScienceMiles} \cite{ScienceMiles} is a cryptocurrency for incentivizing peer-reviews through a blockchain-based platform and an open peer-review process. Avital \cite{AvitalToken} suggests a token-based peer-review payment system. \emph{INFINITCODEX (I8X)} \cite{I8X}, is a platform that promotes cooperative user behaviour through dynamic research papers that undergo  continuous peer review process. The system implements cryptoeconomical incentives for building reputation in the community of users. \newline Other proposals to improve the peer-review system have instead focused on features such as decentralization, security \cite{Pevo,CryptSubmit,MarsChain}.
 
 \section{System concept}
 In this paper we propose Ants-Review, a new incentivisation mechanism built on a distributed platform that issues open peer-reviews to validate scientific papers while preserving the anonymity of its contributors. We imagine a final paper originating from the peer-review process as a complex system that emerges from the interactions between the authors and the reviewers, a whole that is more than the sum of its parts. Therefore, the name evokes an ant colony as a self-organising organism in which all micro-contributions of the individuals emerge into complex behaviour.
@@ -249,6 +248,6 @@ The authors declare no competing interests.
 % References will then be sorted and formatted in the correct style.
 %
 \bibliographystyle{splncs04}
-\bibliography{ref1-intro.bib,ref2-peerreview.bib,ref2-related.bib, ref3-system.bib,ref4-discuss.bib}
+\bibliography{ref1-intro.bib,ref2-peerreview.bib,ref2-relatedwork.bib, ref3-system.bib,ref4-discuss.bib}
 
 \end{document}
