--- a/ref2-relatedwork.bib
+++ b/ref2-relatedwork.bib
@@ -1,4 +1,36 @@
-work@article{10.1371/journal.pbio.0050107, 
+@article{Pevo, 
+author = {Wolf, Michael and Wiegand, Marlies and Drichel, Alexander}, 
+title = {{Decentralized Open Access and Evaluation - Whitepaper}}, 
+abstract = {{PEvO(​P​ublishandEv​aluate​O​nchain)aimsatcreatingaplatformforopenscientificpublicationandinteractiveevaluationwhichusestheblockchaintechnology,namelytheSteemblockchain.Combiningscientificcommunicationandblockchainallowsconstantreviewsandupdatesandpermanentinsightintoallsteps-oneofseveralfeaturestheestablishedpeer-review-processislacking.Whatmakesthisapproachdifferentfromopenaccesssolutionsemerginginsideanicheisitsdecentrality:nocentralrepositoryandno1singleadministratororownerexist.Everyonecancontributebyprovidingaserver.Thecodewillbeopensource,allowingeveryoneto“fork”PEvOandsetupasimilarservicewith different settings.}}, 
+keywords = {WHITEPAPER}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/BLOCKCHAIN_for_SCIENCE-literature2020/pevo_whitepaper.pdf}, 
+year = {2016}, 
+rating = {2}
+}
+@article{ScienceMiles, 
+author = {Jan, Zeeshan and Third, Allan and Ibanez, Luis-Daniel and Bachler, Michelle and Simperl, Elena and Domingue, John}, 
+title = {{ScienceMiles: Digital Currency for Researchers}}, 
+doi = {10.1145/3184558.3191556}, 
+abstract = {{Peer-reviewing is a community-driven activity where volunteer researchers assess the work of other researchers. Peer-reviewing is an important and time-consuming activity that has very little recognition. This lack of incentive may lead to poor-quality reviews and frustration from researchers. In this paper, we envision ScienceMiles, a Blockchain-based platform to manage the incentivization of peer-reviewers through a crypto-currency.}}, 
+pages = {1183--1186}, 
+keywords = {competitors}, 
+local-url = {file://localhost/Users/bt_neurospin/Downloads/ScienceMiles2018.pdf}, 
+year = {2018}, 
+rating = {4}
+}
+@article{Sharples-Kudos, 
+author = {Sharples, Mike and Domingue, John}, 
+title = {{Lecture Notes in Computer Science}}, 
+issn = {0302-9743}, 
+doi = {10.1007/978-3-319-45153-4\_48}, 
+abstract = {{The ‘blockchain’ is the core mechanism for the Bitcoin digital payment system. It embraces a set of inter-related technologies: the blockchain itself as a distributed record of digital events, the distributed consensus method to agree whether a new block is legitimate, automated smart contracts, and the data structure associated with each block. We propose a permanent distributed record of intellectual effort and associated reputational reward, based on the blockchain that instantiates and democratises educational reputation beyond the academic community. We are undertaking initial trials of a private blockchain or storing educational records, drawing also on our previous research into reputation management for educational systems.}}, 
+pages = {490--496}, 
+keywords = {peer-review,incentivization,reward}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/link.springer.com%2002062020,%20231316.pdf}, 
+year = {2016}, 
+rating = {5}
+}
+@article{10.1371/journal.pbio.0050107, 
 author = {Hauser, Marc and Fehr, Ernst}, 
 title = {{An Incentive Solution to the Peer Review Problem}}, 
 issn = {1544-9173}, 
@@ -12,27 +44,6 @@ journal = {PLoS Biology},
 keywords = {incentivization}, 
 local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Hauser-An%20Incentive%20Solution%20to%20the%20Peer%20Review%20Problem-2007-PLoS%20Biology.pdf}, 
 year = {2007}
-}
-@article{Pevo, 
-author = {Wolf, Michael and Wiegand, Marlies and Drichel, Alexander}, 
-title = {{Decentralized Open Access and Evaluation - Whitepaper}}, 
-abstract = {{PEvO(​P​ublishandEv​aluate​O​nchain)aimsatcreatingaplatformforopenscientificpublicationandinteractiveevaluationwhichusestheblockchaintechnology,namelytheSteemblockchain.Combiningscientificcommunicationandblockchainallowsconstantreviewsandupdatesandpermanentinsightintoallsteps-oneofseveralfeaturestheestablishedpeer-review-processislacking.Whatmakesthisapproachdifferentfromopenaccesssolutionsemerginginsideanicheisitsdecentrality:nocentralrepositoryandno1singleadministratororownerexist.Everyonecancontributebyprovidingaserver.Thecodewillbeopensource,allowingeveryoneto“fork”PEvOandsetupasimilarservicewith different settings.}}, 
-keywords = {WHITEPAPER}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/BLOCKCHAIN_for_SCIENCE-literature2020/pevo_whitepaper.pdf}, 
-year = {2016}, 
-rating = {2}
-}
-@article{Sharples-Kudos, 
-author = {Sharples, Mike and Domingue, John}, 
-title = {{Lecture Notes in Computer Science}}, 
-issn = {0302-9743}, 
-doi = {10.1007/978-3-319-45153-4\_48}, 
-abstract = {{The ‘blockchain’ is the core mechanism for the Bitcoin digital payment system. It embraces a set of inter-related technologies: the blockchain itself as a distributed record of digital events, the distributed consensus method to agree whether a new block is legitimate, automated smart contracts, and the data structure associated with each block. We propose a permanent distributed record of intellectual effort and associated reputational reward, based on the blockchain that instantiates and democratises educational reputation beyond the academic community. We are undertaking initial trials of a private blockchain or storing educational records, drawing also on our previous research into reputation management for educational systems.}}, 
-pages = {490--496}, 
-keywords = {peer-review,incentivization,reward}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/link.springer.com%2002062020,%20231316.pdf}, 
-year = {2016}, 
-rating = {5}
 }
 @article{ResearchCoin, 
 author = {Spearpoint, Michael}, 
@@ -58,7 +69,7 @@ local-url = {file://localhost/Users/bt_neurospin/Downloads/gipp2017b%20(1).pdf},
 year = {2017}, 
 rating = {4}
 }
-@article{10.1007/978-3-030-10549-5_28, 
+@article{MarsChain, 
 author = {Emmadi, Nitesh and Maddali, Lakshmi Padmaja and Sarkar, Sumanta}, 
 title = {{MaRSChain: Framework for a Fair Manuscript Review System Based on Permissioned Blockchain}}, 
 issn = {0302-9743}, 
@@ -67,27 +78,6 @@ abstract = {{Current Manuscript Review Systems (Conference/Journal) rely on a ce
 pages = {355--366}, 
 local-url = {file://localhost/Users/bt_neurospin/Downloads/MaRSChainFinal%20(1).pdf}, 
 year = {2018}
-}
-@article{10.17705/1cais.04228, 
-author = {Avital, Michel}, 
-title = {{Peer Review: Toward a Blockchain-enabled Market-based Ecosystem}}, 
-doi = {10.17705/1cais.04228}, 
-pages = {646--653}, 
-volume = {42}, 
-journal = {Communications of the Association for Information Systems}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Avital-Peer%20Review-%20Toward%20a%20Blockchain-enabled%20Market-based%20Ecosystem-2018-Communications%20of%20the%20Association%20for%20Information%20Systems.pdf}, 
-year = {2018}
-}
-@article{ScienceMiles, 
-author = {Jan, Zeeshan and Third, Allan and Ibanez, Luis-Daniel and Bachler, Michelle and Simperl, Elena and Domingue, John}, 
-title = {{ScienceMiles: Digital Currency for Researchers}}, 
-doi = {10.1145/3184558.3191556}, 
-abstract = {{Peer-reviewing is a community-driven activity where volunteer researchers assess the work of other researchers. Peer-reviewing is an important and time-consuming activity that has very little recognition. This lack of incentive may lead to poor-quality reviews and frustration from researchers. In this paper, we envision ScienceMiles, a Blockchain-based platform to manage the incentivization of peer-reviewers through a crypto-currency.}}, 
-pages = {1183--1186}, 
-keywords = {competitors}, 
-local-url = {file://localhost/Users/bt_neurospin/Downloads/ScienceMiles2018.pdf}, 
-year = {2018}, 
-rating = {4}
 }
 @article{I8X, 
 author = {Duh, Emilija Stojmenova and Duh, Andrej and Droftina, Uroš and Kos, Tim and Duh, Urban and Korošak, Tanja Simonič and Korošak, Dean}, 
@@ -101,4 +91,14 @@ journal = {Publications},
 local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Duh-Publish-and-Flourish-%20Using%20Blockchain%20Platform%20to%20Enable%20Cooperative%20Scholarly%20Communication-2019-Publications.pdf}, 
 year = {2019}, 
 rating = {4}
+}
+@article{AvitalToken, 
+author = {Avital, Michel}, 
+title = {{Peer Review: Toward a Blockchain-enabled Market-based Ecosystem}}, 
+doi = {10.17705/1cais.04228}, 
+pages = {646--653}, 
+volume = {42}, 
+journal = {Communications of the Association for Information Systems}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Avital-Peer%20Review-%20Toward%20a%20Blockchain-enabled%20Market-based%20Ecosystem-2018-Communications%20of%20the%20Association%20for%20Information%20Systems.pdf}, 
+year = {2018}
 }
