--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -86,7 +86,7 @@ Thus, the system acts also as a reputation builder.
 \paragraph{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to righteously attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a decentralized content-addressable, peer-to-peer protocol which guarantees data immutability and unique file identification.
 \newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system still engages 
 
-\paragraph{Inclusiveness via gamification.} ll the community is involved in the process of peer-reviewing since there is no selection process ('open participation', 'open interaction', 'open platform');
+\paragraph{Inclusiveness via gamification.} All the community is involved in the process of peer-reviewing since there is no selection process ('open participation', 'open interaction', 'open platform') and reviews evaluation are performed via Quadratic Voting.
 
 
 There are two possible scenarios depending if AntsReview integrates an existing journal or if AntsReview becomes a platform completely decoupled from journals.
